<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#4779C5"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottietransiction1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:lottie_rawRes="@raw/login_animation"
        app:lottie_autoPlay="true"
        app:lottie_loop="true" />

    <LinearLayout
        android:id="@+id/interface_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lottietransiction1"
        android:layout_alignParentStart="true"
        android:paddingLeft="40dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-27dp"
        android:orientation="vertical"
        android:background="@drawable/layout_login">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/title_hello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_HELLO"
                android:textColor="#B6B8BC"
                android:textColorHint="#1B1B1B"
                android:textSize="65dp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_SIGN_IN"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="20dp"
            android:layout_weight="3">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edittext_login"
                android:drawableLeft="@drawable/login_icon_person"
                android:drawablePadding="10dp"
                android:elevation="3dp"
                android:ems="10"
                android:hint="@string/HINT_EMAIL_LOGIN"
                android:inputType="textPersonName"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSelectHandle="@drawable/bg_profil"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edittext_login"
                android:drawableLeft="@drawable/lock"
                android:drawablePadding="10dp"
                android:ems="10"
                android:elevation="3dp"
                android:hint="@string/HINT_PASSWORD_LOGIN"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/forget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:lineSpacingExtra="16sp"
                    android:text="@string/my_text"
                    android:textAllCaps="false"
                    android:textColor="#2732A9"
                    android:textStyle="italic"
                    android:clickable="true"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="60dp"
                android:layout_marginRight="20dp"
                android:gravity="bottom">

                <Button
                    android:id="@+id/button_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:backgroundTint="#B6B8BC"
                    android:text="@string/txt_login"
                    android:textColor="@color/black" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:paddingRight="10dp"
                        android:text="@string/noaccount" />

                    <TextView
                        android:id="@+id/txt_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#2732A9"
                        android:textStyle="bold"
                        android:text="@string/signup" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>